--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "zizaco/entrust": "5.2.x-dev",
-        "bosnadev/repositories": "^0.8.0"
+        "czim/laravel-repository": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
