--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --watch-poll --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "dev": "npm run development",
+    "development": "cross-env process.env.section=front NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env process.env.section=front NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env process.env.section=front NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "admin-dev": "npm run admin-development",
+    "admin-development": "cross-env process.env.section=backend NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "admin-watch": "cross-env process.env.section=backend NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "admin-prod": "npm run admin-production",
+    "admin-production": "cross-env process.env.section=backend NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.15.3",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "element-ui": "^1.3.7",
     "jquery": "^3.1.1",
-    "laravel-mix": "^1.0.6",
+    "laravel-mix": "^1.4.0",
     "lodash": "^4.17.4",
-    "style-loader": "^0.18.2",
     "vue": "^2.3.4",
+    "element-ui": "^1.3.7",
     "vue-html5-editor": "^1.1.1",
     "vue-loader": "^12.2.1",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue-cookie": "^1.1.4",
+    "code-prettify": "^0.1.0",
+    "bootstrap": "^3.3.7",
+    "echarts": "^3.6.2",
+    "vue-bus": "^1.0.0",
+    "nprogress": "^0.2.0"
   },
   "dependencies": {
-    "vue-cookie": "^1.1.4"
+
   }
 }
