--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ env:
     - DB_USERNAME=travis
 
 script:
-    - mysql -e "CREATE SCHEMA travis; GRANT ALL PRIVILEGES ON travis.* to travis@'%'"
+    - mysql -e "CREATE DATABASE travis; GRANT ALL PRIVILEGES ON travis.* to travis@'%'"
     - composer install
     - phpunit --coverage-text
