--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,9 @@ php:
     - '7.0'
 
 env:
-    - DB_DATABASE=travis
-    - DB_USERNAME=travis
+    global:
+        - DB_DATABASE=travis DB_USERNAME=travis
 
 script:
-    - mysql -e "CREATE DATABASE travis; GRANT ALL PRIVILEGES ON travis.* to travis@'%'"
     - composer install
     - phpunit --coverage-text
