chore(travis): support APP_KEY, merge unused .env file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
-APP_LOG_LEVEL=debug
+APP_DEBUG=false
+APP_LOG_LEVEL=info
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
@@ -26,6 +26,5 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
 
 GOOGLE_ANALYTIC_CODE=
