chore(travis): fix last commit, rename .env.producton to .env.example

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ env:
 
 script:
     - composer install
-    - cp .env.production .env
+    - cp .env.example .env
     - php artisan key:generate
     - phpunit --coverage-text
