chore(travis): add database migrate

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ script:
     - composer install
     - cp .env.example .env
     - php artisan key:generate
+    - php artisan migrate
     - phpunit --coverage-text
