--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
 
 env:
     global:
-        - APP_DEBUG=false DB_DATABASE=hustoj DB_USERNAME=root
+        - APP_DEBUG=false DB_DATABASE=hustoj DB_USERNAME=root DB_USERNAME=
 
 before_script:
   - "mysql -e 'create database `hustoj`;'"
