--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.5.*",
         "zizaco/entrust": "5.2.x-dev",
-        "czim/laravel-repository": "^1.4"
+        "czim/laravel-repository": "^1.4",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
