--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.4.0",
-    "lodash": "^4.17.4",
     "vue": "^2.3.4",
     "element-ui": "^1.3.7",
     "vue-html5-editor": "^1.1.1",
@@ -28,8 +27,7 @@
     "code-prettify": "^0.1.0",
     "bootstrap": "^3.3.7",
     "echarts": "^3.6.2",
-    "vue-bus": "^1.0.0",
-    "nprogress": "^0.2.0"
+    "vue-bus": "^1.0.0"
   },
   "dependencies": {
 
