feat(env): add mix env config replace hard code

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_KEY=
 APP_DEBUG=false
 APP_LOG_LEVEL=info
 APP_URL=http://localhost
+MIX_ADMIN_URL=http://neo.test
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
