--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "admin-production": "cross-env process.env.section=backend NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.17",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.4.0",
-    "vue": "^2.3.4",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^1.7.2",
+    "lodash": "^4.17.4",
+    "vue": "^2.5.7",
     "element-ui": "^1.3.7",
     "vue-html5-editor": "^1.1.1",
-    "vue-loader": "^12.2.1",
-    "vue-router": "^2.6.0",
+    "vue-loader": "^13.6.2",
+    "vue-router": "^3.0.1",
     "vue-cookie": "^1.1.4",
     "code-prettify": "^0.1.0",
     "bootstrap": "^3.3.7",
