feat(judger): add judger api

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,9 @@ MAIL_ENCRYPTION=null
 
 GOOGLE_ANALYTIC_CODE=
 SENTRY_LARAVEL_DSN=
+
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_VHOST=
+RABBITMQ_LOGIN=
+RABBITMQ_PASSWORD=
