chore(composer): make project name comply with standard

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hustoj-neo",
+    "name": "hustoj/hustoj-neo",
     "description": "HUST Online Judge System",
     "keywords": [
         "online judge",
