--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "axios": "^0.17",
     "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.4.1",
     "cross-env": "^5.1",
     "jquery": "^3.2",
     "laravel-mix": "^1.7.2",
