chore(composer): update composer config

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php-amqplib/php-amqplib": "^2.10",
         "santigarcor/laratrust": "^5.2",
         "sentry/sentry-laravel": "^1.2",
-        "czim/laravel-repository": "dev-feature/laravel-6-support"
+        "czim/laravel-repository": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
