feat(api): gzip get data api response

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "php-amqplib/php-amqplib": "^2.10",
         "santigarcor/laratrust": "^5.2",
         "sentry/sentry-laravel": "^1.5",
-        "czim/laravel-repository": "^2.0"
+        "czim/laravel-repository": "^2.0",
+        "ext-zlib": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
