add sqs support, use laravel queue instead custom

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 RABBITMQ_HOST=
 RABBITMQ_PORT=
 RABBITMQ_VHOST=
+RABBITMQ_QUEUE=
 RABBITMQ_LOGIN=
 RABBITMQ_PASSWORD=
+
 JUDGE_SERVICE_DOWN=false
