--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,10 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "mews/captcha": "^3.2",
-        "php-amqplib/php-amqplib": "^3.1",
         "santigarcor/laratrust": "~7.1",
-        "sentry/sentry-laravel": ">=2.1"
+        "sentry/sentry-laravel": ">=2.1",
+        "aws/aws-sdk-php-laravel": "~3.0",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
