--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
         "php": "^8.0.2",
         "ext-json": "*",
         "ext-zlib": "*",
+        "anhskohbo/no-captcha": "^3.4",
+        "aws/aws-sdk-php-laravel": "~3.0",
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^9.11",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
-        "mews/captcha": "^3.2",
         "santigarcor/laratrust": "~7.1",
         "sentry/sentry-laravel": ">=2.1",
-        "aws/aws-sdk-php-laravel": "~3.0",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^12.0"
     },
     "require-dev": {
